cilium-policy-evaluator/environment/policies/04-monitoring-open-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring-open-ingress
spec:
  endpointSelector:
    matchLabels:
      app: monitoring
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
            - port: "9093"
              protocol: TCP
  enableDefaultDeny:
    ingress: true
    egress: false
