cilium-policy-evaluator/environment/policies/05-prod-egress-cidr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prod-egress-cidr
spec:
  endpointSelector:
    matchLabels:
      env: prod
    matchExpressions:
      - key: tier
        operator: DoesNotExist
  egress:
    - toCIDR:
        - 10.0.0.0/8
    - toEndpoints:
        - matchLabels:
            app: monitoring
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
