cilium-policy-evaluator/environment/policies/07-block-data-tier-ssh.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: block-data-tier-ssh
spec:
  endpointSelector:
    matchLabels:
      tier: data
  ingressDeny:
    - toPorts:
        - ports:
            - port: "22"
              protocol: TCP
